# mcmanager

./: .gitignore  .secret_key  MANIFEST.in  README.md  conftest.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
.github/workflows/: ci.yml
configs/: server.properties
console/: admin.py  apps.py  models.py  urls.py  views.py
console/management/commands/: format_code.py  generate_secret_key.py
console/migrations/: 0001_initial.py  0002_alter_server_ip_alter_server_port.py  0003_remove_server_ip_server_status.py
console/templates/: index.html
console/templates/console/: index.html
docs/: design-melhorias.md
docs/superpowers/plans/: 2026-07-17-mcmanager-phase1-security.md  2026-07-17-mcmanager-phase2-process-manager.md  2026-07-20-jar-downloads.md  2026-07-20-realtime-console.md  2026-07-21-auto-restart-scheduling.md  2026-07-21-backups.md  2026-07-22-ci.md  2026-07-22-dashboard.md  2026-07-22-dependency-vuln-triage.md  2026-07-22-doctor.md  2026-07-22-structured-errors.md  2026-07-23-launch-output-capture.md
docs/superpowers/specs/: 2026-07-17-mcmanager-phase2-design.md  2026-07-20-jar-downloads-design.md  2026-07-20-realtime-console-design.md  2026-07-21-auto-restart-scheduling-design.md  2026-07-21-backups-design.md  2026-07-22-ci-design.md  2026-07-22-dashboard-design.md  2026-07-22-dependency-vuln-triage-design.md  2026-07-22-doctor-design.md  2026-07-22-structured-errors-design.md  2026-07-23-launch-output-capture-design.md
mcmanager/: __main__.py  asgi.py  cli.py  settings.py  urls.py  wsgi.py
mcmanager/console/: admin.py  apps.py  compat.py  forms.py  json_utils.py  models.py  urls.py  views.py  views_backups.py  views_jars.py
mcmanager/console/migrations/: 0001_initial.py  0004_server_server_properties.py  0005_alter_server_jar_template_and_more.py  0006_server_rcon_password_server_rcon_port.py  0007_remove_server_status.py  0008_jardownload.py  0009_backup.py  (+1 more)
static/css/: tailwind.css
(+44 files in other folders)
