[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmanager"
version = "0.1.2"
description = "A Django-based web interface to manage Minecraft servers on a VPS"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "Django>=4.2.0,<5.2.0",
    "psutil>=5.8.0",
    "whitenoise>=6.0.0",
]

[project.scripts]
mcmanager = "mcmanager.cli:main"

[tool.setuptools]
packages = ["mcmanager", "mcmanager.console"]

[tool.setuptools.package-data]
mcmanager = ["configs/server.properties"]
"mcmanager.console" = [
    "templates/**/*.html",
    "static/**/*",
]
